--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         </div>
                         <h4 class="mb-3">Drones</h4>
                         <p>Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam lorem diam.</p>
-                        <a class="small fw-medium" href="drone.html">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                        <a class="small fw-medium" href="">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                     </div>
                 </div>
             </div>
